# codes

./: .gitignore  concurrency.clj  learnc.c  robots.txt
BinaryAnalysis/: a.out  comp_ex.c  comp_ex.s
DevOps/: template.json
ElmWithRoc/: webserver.roc
JS/: cart.js  cart2.html  cart3.js  server.js
Pigment/: Cargo.toml  macro_exp.rs
Rust/: Makefile  commas.rs  deref.rs  echo  echo.rs  gen_ast  gen_ast.rs  parser.rs
adonis-demo/: adonisrc.ts  package-lock.json  package.json
bash/: basics.sh
dart/: ErrorHandling.dart  Functions.dart  intro.dart  keywords.dart  lib.dart
dispatch_me/: Gemfile
elm/: buttons.elm  index.elm  index.html  json.elm  text_fields.elm
fast/: main.py   type_hints.py
go/: api.go  main.go  poisonivy.go
hack_notes/: Access Control.txt  Bug Bounty Blogs.txt  Bug Bounty Playbook.md  Bug_Bounty_Platforms.txt  Cross-Site Request Forgery.txt  HTML injection.txt  HTTP Parameter Pollution.txt  IDORs.txt  Insecure Deserialization.txt  Methodology.txt  Race Conditions.txt  Recon Questions for high impact.txt  SQL Injection.txt  Server Side Request Forgery.txt  Single Sign-On Security.txt  Study Timeline  Study Timeline.txt  Template Engine Injection.txt  The Blueprint to your first $1,000+ Bounty.txt  XML External Entities.txt  XSS Payloads  XSS Polymorphism.txt  XSS.txt  Your first $1K+ Bounty.txt  donut's Advice  hacking template engines.txt  ideas.txt  nmap_scan.sh  (+1 more)
zero2prod/: Cargo.toml
zero2prod/src/: lib.rs  main.rs  run.rs  startup.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
(+449 files in other folders)
