[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
# [dependencies]
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"


[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
