[package]
authors = ["Rasheed Starlet, rasheedstarlet.com"]

name = "pigment"
version = "0.1.0"
edition = "2021"
[dependencies]
actix-web = "4"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"


[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]

[dev-dependencies]
reqwest = "0.12.6"